# datacrypt-dashboard

./: agents.md  pyproject.toml
src/datacrypt_dashboard/: app.py
