[project]
name = "datacrypt-dashboard"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "streamlit (>=1.58.0,<2.0.0)",
    "plotly (>=6.8.0,<7.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "requests (>=2.34.2,<3.0.0)"
]

[tool.poetry]
packages = [{include = "datacrypt_dashboard", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
